--- a/_config.yml
+++ b/_config.yml
@@ -25,24 +25,24 @@ baseurl: ''
 title: 'Alan Reyes-Figueroa'
 description: 'PhD Student at the Max Planck Institute for Mathematics'
 permalink: pretty
-logo: "/logos/logo.svg" # Site logo, also used in jekyll-seo-tag
+logo: "webpage/logos/logo.svg" # Site logo, also used in jekyll-seo-tag
 
 # Pagination
 paginate: 5
 paginate_path: blog/page:num
 
-# Header nav
+# Hewebpage/ader nav
 navigation_header:
 - title: Home
   url: https://pfafner.github.com/webpage
 - title: CV
-  url: Files/CV.pdf
+  url: webpage/Files/CV.pdf
 - title: Publications
-  url: about/
+  url: webpage/about/
 - title: Events
-  url: blog/
+  url: webpage/blog/
 - title: Contact
-  url: contact/
+  url: webpage/contact/
 - title: Github
   url: https://pfafner.github.com/webpage
   
